# caisson

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml  justfile  release-plz.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
docs/: cli.md  releases.md
scripts/: docker-test.sh  make-demo-edgepkg.sh
src/: lib.rs  main.rs
src/app/: mod.rs
src/audit/: mod.rs
src/cli/: mod.rs
src/compose/: mod.rs
src/config/: mod.rs
src/docker/: mod.rs
src/domain/: mod.rs
src/package/: mod.rs
src/persistence/: mod.rs
src/update/: mod.rs
tests/: image_import.rs  package_validation.rs  service_update.rs
tests/common/: mod.rs
tests/fixtures/: services.valid.toml
tests/fixtures/compose/: backend.compose.yaml
tests/fixtures/manifests/: invalid-package-type.toml  malformed.toml  min-updater-too-new.toml  mismatched-platform.toml  mismatched-service-revision.toml  unknown-service.toml  valid-frontend.toml
