[package]
name = "caisson"
version = "0.1.0-alpha"
edition = "2024"
description = "Offline Docker service updater for single-device edge systems"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/marcelo-6/caisson"
homepage = "https://github.com/marcelo-6/caisson"
keywords = ["docker", "edge", "offline", "updater", "air-gap"]
categories = ["command-line-utilities"]