[package]
name = "caisson"
version = "0.1.1"
edition = "2024"
authors = ["Marcelo Amorim"]
description = "Offline Docker service updater for airgapped edge devices"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/marcelo-6/caisson"
homepage = "https://github.com/marcelo-6/caisson"
documentation = "https://docs.rs/caisson"
keywords = ["docker", "edge", "offline", "updater", "airgap"]
categories = ["command-line-utilities"]

include = [
    "/src/**",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/LICENSE",
]

[dependencies]
bollard = "0.20"
bytes = "1"
clap = { version = "4.6", features = ["derive"] }
futures-util = "0.3"
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
tempfile = "3"
thiserror = "2.0"
tokio = { version = "1", features = ["fs", "rt-multi-thread"] }
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
toml = "1"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
